--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -7,17 +7,19 @@ html
         div.container
             h3 bmi calculator
             div.jumbotron
-                form(role='form', action='', method='post', enctype='multipart/form-data')
-                    .form-group
-                        label(for='height') Your height (centimeters):
-                        input#height(type='number', name='height', required)
-                    .form-group
-                        label(for='weight') Your weight (kilograms):
-                        input#weight(type='number', name='weight', required)
+                div.row
+                    div.col-sm-6
+                        form(role='form', action='', method='post', enctype='multipart/form-data')
+                            .form-group
+                                label(for='height') Your height (centimeters):
+                                input#height(type='number', name='height', required)
+                            .form-group
+                                label(for='weight') Your weight (kilograms):
+                                input#weight(type='number', name='weight', required)
 
-                    button.btn.btn-primary(type='submit') Submit
+                            button.btn.btn-primary(type='submit') Submit
 
-            p
-                h3 your bmi:
-                h3= bmi
+                    div.col-sm-3
+                        h3 your bmi:
+                        h3= bmi
 
